# miniploy

./: pyproject.toml  requirements.txt
src/miniploy/: __init__.py  app.py  main.py
src/miniploy/ai/: analyzer.py
src/miniploy/commands/: deploy.py  run.py  setup.py
